# CMake_QT_11_mt_static_Standard

./: .gitignore
skins/skin1/: BusyIndicator_Standard.qml  Config.qml  Label_Standard.qml  TabBar_Standard.qml  TabButton_Standard.qml  TextField_Standard.qml  skin.qrc
skins/skin2/: Button_Standard.qml  Config.qml  qtquickcontrols2.conf  skin.qrc
skins/skin3/: BusyIndicator_Standard_Test.qml  TabBar_Standard.qml  TabBar_Standard_Test.qml  skin.qrc
skins/skin4/: TabBar_Standard.qml  TabButton_Standard.qml  skin.qrc
src/: CMakeLists.txt  EngineReloaderWrapper.cpp  EngineReloaderWrapper.h  QmlObjs.cpp  QmlObjs.h  QuickViewReloader.h  QuickViewReloaderWrapper.cpp  Resource.h  choose_qt_sdk.cmake  global_defines.h  global_include.h  global_modify.h  main.cpp  main.qml  recursive_search.cmake  utils.js
